# STATpy_platform

./: .gitignore  DQ_Dashboard_Metric_Catalog_v2.xlsx  IMPLEMENTATION_GUIDE_SAAS.md  README.md  app.py  config.yaml  data_manager.py  data_store.py  features_registry.py  monitoring_config.py  monitoring_config.yaml  processor.py  pyproject.toml  renderer.py  requirements.txt  scaffold.py  shell.py  statpy_monitoring_thresholds.xlsm  validation.py  wholesale_portfolio_dummy_db.xlsx
Context/: BUILDING_A_NEW_DASHBOARD.md  STATpy_dashboard_propuesta_transcripcion.md  STATpy_estructura_archivos.md  STATpy_overview_transcripcion.md
assets/: dqd.css  pd_subnav.js  styles.css
callbacks/: completeness_callbacks.py  monitoring_ead_models_callbacks.py  monitoring_ead_performance_callbacks.py  monitoring_lgd_models_callbacks.py  monitoring_lgd_performance_callbacks.py  monitoring_loss_performance_callbacks.py  monitoring_overview_callbacks.py  monitoring_pd_models_callbacks.py  monitoring_pd_performance_callbacks.py  population_callbacks.py  saas_callbacks.py  schema_callbacks.py  scorecard_callbacks.py
components/: __init__.py  charts.py  comparison_mode.py  filters.py  kpis.py  layout.py  monitoring_helpers_js.py  monitoring_layout.py  monitoring_style.py
config/: __init__.py  environments.py  settings.py
data/: data_loader.py  ead.py  lgd.py  loss.py  mev.py  overview.py  rank_ordering.py  transformations.py
docs/: pd_performance_data_schema.html
pages/: business_rules_page.py  completeness_page.py  drift_page.py  governance_page.py  monitoring_ead_models_page.py  (+12 more)
(+328 files in other folders)
