[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-performance-dash"
version = "0.1.0"
description = "Standalone Dash dashboard for wholesale portfolio model monitoring."
requires-python = ">=3.11"
dependencies = [
    "dash>=2.17",
    "plotly>=5.22",
    "polars>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "Dashboards",
    "Dashboards.callbacks",
    "Dashboards.components",
    "Dashboards.data",
    "Dashboards.pages",
]

[tool.setuptools.package-dir]
Dashboards = "."

[tool.setuptools.package-data]
Dashboards = [
    "assets/*",
    "source_data/*",
]
